Rename project and add github workflow

--- a/QrCoderBlazor/wwwroot/index.html
+++ b/QrCoderBlazor/wwwroot/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>BlazorApp-empty1</title>
+    <title>QrCoderBlazor</title>
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     
     <!-- If you add any scoped CSS files, uncomment the following to load them
-    <link href="BlazorApp_empty1.styles.css" rel="stylesheet" /> -->
+    <link href="QrCoderBlazor.styles.css" rel="stylesheet" /> -->
 </head>
 
 <body>
